--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@nx/js": "16.3.2",
     "@types/node": "20.2.5",
     "@types/uuid": "9.0.1",
+    "@typescript-eslint/eslint-plugin": "5.59.9",
     "esbuild": "0.17.19",
     "eslint": "8.41.0",
+    "eslint-config-prettier": "8.8.0",
     "nx": "16.3.2",
     "prettier": "2.8.8",
     "rimraf": "^5.0.1",
