--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0-alpha.1",
   "license": "MIT",
   "scripts": {
-    "cb:all": "rimraf dist && nx run-many -t=cb"
+    "cb:all": "rimraf dist && nx run-many -t=cb",
+    "version:all": "npm version --no-git-tag-version --workspace @dfns/sdk --workspace @dfns/sdk-key-signer --workspace @dfns/sdk-webauthn-signer --include-workspace-root",
+    "publish:all": "./bin/publish.sh"
   },
   "private": true,
   "dependencies": {
