--- a/packages/examples/auth-delegated/client/package.json
+++ b/packages/examples/auth-delegated/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "client-direct",
-  "version": "0.1.0",
+  "name": "auth-delegated-client",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -21,7 +21,11 @@
   },
   "devDependencies": {
     "@craco/craco": "7.1.0",
-    "craco-babel-loader": "1.0.4"
+    "@tailwindcss/typography": "^0.5.9",
+    "autoprefixer": "^10.4.14",
+    "craco-babel-loader": "1.0.4",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   },
   "scripts": {
     "start": "craco start",
