--- a/packages/examples/service-account/package.json
+++ b/packages/examples/service-account/package.json
@@ -1,13 +1,13 @@
 {
   "name": "service-account",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "dependencies": {
     "dotenv": "16.1.4"
   },
   "devDependencies": {},
   "scripts": {
-    "build": "tsc --noEmit && esbuild index.ts --bundle --sourcemap --platform=node --target=es2020 --outfile=dist/index.js",
-    "exec": "node dist/index.js"
+    "start": "node dist/index.js",
+    "build": "tsc --noEmit && esbuild index.ts --bundle --sourcemap --platform=node --target=es2020 --outfile=dist/index.js"
   }
 }
