complete registration flow

--- a/packages/examples/service-account/package.json
+++ b/packages/examples/service-account/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "dependencies": {
+    "@dfns/sdk": "*",
+    "@dfns/sdk-keysigner": "*",
     "dotenv": "16.1.4"
   },
   "devDependencies": {},
