--- a/packages/examples/auth-delegated/server/package.json
+++ b/packages/examples/auth-delegated/server/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon",
-    "start:server": "node -r ts-node/register ./index.ts"
+    "start:server": "node -r ts-node/register ./index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@dfns/sdk": "*",
+    "@dfns/sdk-keysigner": "*",
     "cookie-parser": "1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-async-handler": "1.2.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "1.4.3",
