--- a/packages/examples/auth-delegated/server/tsconfig.json
+++ b/packages/examples/auth-delegated/server/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../../../tsconfig.base.json",
   "include": ["index.ts", "src/**/*.ts"],
   "compilerOptions": {
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "outDir": "dist/"
   }
 }
