--- a/packages/examples/auth-direct/package.json
+++ b/packages/examples/auth-direct/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@dfns/sdk": "*",
+    "@dfns/sdk-webauthn": "*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,7 +23,11 @@
   },
   "devDependencies": {
     "@craco/craco": "7.1.0",
-    "craco-babel-loader": "1.0.4"
+    "@tailwindcss/typography": "^0.5.9",
+    "autoprefixer": "^10.4.14",
+    "craco-babel-loader": "1.0.4",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   },
   "scripts": {
     "start": "craco start",
