--- a/packages/examples/nextjs-delegated/package.json
+++ b/packages/examples/nextjs-delegated/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@dfns/sdk": "*",
-    "@dfns/sdk-key-signer": "*",
-    "@dfns/sdk-webauthn-signer": "*",
+    "@dfns/sdk-keysigner": "*",
+    "@dfns/sdk-webauthn": "*",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
