add ethers js integration

--- a/packages/examples/service-account/.env.example
+++ b/packages/examples/service-account/.env.example
@@ -1,4 +1,4 @@
-DFNS_API_URL='https://api.dfns.wtf'
+DFNS_API_URL='https://api.dfns.ninja'
 DFNS_APP_ID='ap-3n0jv-87cfc-953pop0iauf2sv5t'
 DFNS_APP_ORIGIN='http://localhost:3000'
 DFNS_CRED_ID='Y2ktMWRvcmctdml2aDEtODV1YW9zNXM1a2g0OHN1dQ'
