--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "buffer": "^6.0.3",
     "cross-fetch": "^3.1.6",
+    "ethers": "6.6.1",
     "uuid": "9.0.0"
   },
   "devDependencies": {
