--- a/packages/examples/auth-delegated/server/.env.example
+++ b/packages/examples/auth-delegated/server/.env.example
@@ -1,7 +1,7 @@
 PORT=8000
 DFNS_API_URL='https://api.dfns.ninja'
-DFNS_APP_ID='ap-3n0jv-87cfc-953pop0iauf2sv5t'
+DFNS_APP_ID='<redacted>'
 DFNS_APP_ORIGIN='http://localhost:3000'
-DFNS_CRED_ID='Y2ktMWRvcmctdml2aDEtODV1YW9zNXM1a2g0OHN1dQ'
+DFNS_CRED_ID='<redacted>'
 DFNS_PRIVATE_KEY='<redacted>'
-DFNS_ACCESS_TOKEN='<redacted>'
+DFNS_AUTH_TOKEN='<redacted>'
