--- a/packages/examples/ethersjs/.env.example
+++ b/packages/examples/ethersjs/.env.example
@@ -3,6 +3,6 @@ DFNS_APP_ID='<redacted>'
 DFNS_APP_ORIGIN='http://localhost:3000'
 DFNS_CRED_ID='<redacted>'
 DFNS_PRIVATE_KEY='<redacted>'
-DFNS_ACCESS_TOKEN='<redacted>'
+DFNS_AUTH_TOKEN='<redacted>'
 DFNS_WALLET_ID='<redacted>'
 GOERLI_RPC_PROVIDER_URL='https://eth.getblock.io/fake-api-key/goerli/'
