--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "cb:all": "rimraf dist && nx run-many -t=cb",
     "version:all": "npm version --no-git-tag-version --workspace @dfns/sdk --workspace @dfns/sdk-keysigner --workspace @dfns/sdk-webauthn --include-workspace-root",
-    "publish:all": "npm run cb:all && ./bin/publish.sh"
+    "publish:all": "npm run cb:all && ./bin/publish.sh",
+    "docs": "typedoc"
   },
   "dependencies": {
     "buffer": "^6.0.3",
@@ -24,6 +25,7 @@
     "nx": "16.3.2",
     "prettier": "2.8.8",
     "rimraf": "^5.0.1",
+    "typedoc": "^0.24.8",
     "typescript": "^5.0.4"
   },
   "workspaces": [
