--- a/packages/examples/auth-delegated/client/.env.local
+++ b/packages/examples/auth-delegated/client/.env.local
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:8000
-REACT_APP_DFNS_WEBAUTHN_RPID=localhost
+REACT_APP_API_URL='http://localhost:8000'
+REACT_APP_DFNS_WEBAUTHN_RPID='localhost'
