--- a/packages/examples/nextjs-delegated/package.json
+++ b/packages/examples/nextjs-delegated/package.json
@@ -13,6 +13,7 @@
     "@dfns/sdk-keysigner": "*",
     "@dfns/sdk-webauthn": "*",
     "autoprefixer": "10.4.14",
+    "dotenv": "16.3.1",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
