--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "docs": "typedoc"
   },
   "dependencies": {
-    "buffer": "^6.0.3",
-    "cross-fetch": "^3.1.6",
+    "@ethersproject/address": "5.7.0",
+    "@ethersproject/abstract-provider": "5.7.0",
+    "@ethersproject/abstract-signer": "5.7.0",
+    "@ethersproject/bytes": "5.7.0",
+    "@ethersproject/hash": "5.7.0",
+    "@ethersproject/keccak256": "5.7.0",
+    "@ethersproject/properties": "5.7.0",
+    "@ethersproject/transactions": "5.7.0",
+    "buffer": "6.0.3",
+    "cross-fetch": "3.1.6",
     "ethers": "6.6.1",
     "uuid": "9.0.0"
   },
