--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@ethersproject/keccak256": "5.7.0",
     "@ethersproject/properties": "5.7.0",
     "@ethersproject/transactions": "5.7.0",
+    "@vechain/connex-driver": "2.0.12",
     "buffer": "6.0.3",
     "cross-fetch": "3.1.6",
+    "elliptic": "6.5.4",
     "ethers": "6.6.1",
+    "thor-devkit": "2.0.8",
     "uuid": "9.0.0"
   },
   "devDependencies": {
     "@nx/js": "16.3.2",
+    "@types/elliptic": "6.4.14",
     "@types/node": "20.2.5",
     "@types/uuid": "9.0.1",
     "@typescript-eslint/eslint-plugin": "5.59.9",
