--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ethersproject/keccak256": "5.7.0",
     "@ethersproject/properties": "5.7.0",
     "@ethersproject/transactions": "5.7.0",
+    "@solana/web3.js": "1.78.0",
     "@vechain/connex-driver": "2.0.12",
     "buffer": "6.0.3",
     "cross-fetch": "3.1.6",
