--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "package-based",
-  "version": "0.1.0-alpha.10",
+  "version": "0.1.0-beta.1",
   "license": "MIT",
   "scripts": {
     "cb:all": "rimraf dist && nx run-many -t=cb",
