feat: wallets import endpoint

--- a/packages/sdk-keyimport-utils/tsconfig.json
+++ b/packages/sdk-keyimport-utils/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["*.ts", "**/*.ts"],
+  "include": ["*.ts", "codegen/**/*"],
   "compilerOptions": {
     "baseUrl": "./"
   }
