--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "ethers": "6.6.1",
     "thor-devkit": "2.0.8",
     "tronweb": "^5.3.0",
-    "uuid": "9.0.0"
+    "uuid": "9.0.0",
+    "viem": "^1.19.3"
   },
   "devDependencies": {
     "@nx/js": "^16.10.0",
