--- a/packages/sdk-keysigner/project.json
+++ b/packages/sdk-keysigner/project.json
@@ -6,7 +6,8 @@
         "outputPath": "dist/@dfns/sdk-keysigner",
         "clean": true,
         "main": "packages/sdk-keysigner/index.ts",
-        "tsConfig": "packages/sdk-keysigner/tsconfig.json"
+        "tsConfig": "packages/sdk-keysigner/tsconfig.json",
+        "updateBuildableProjectDepsInPackageJson": true
       }
     }
   }
