--- a/packages/sdk-keyexport-utils/project.json
+++ b/packages/sdk-keyexport-utils/project.json
@@ -7,7 +7,8 @@
         "clean": true,
         "main": "packages/sdk-keyexport-utils/index.ts",
         "tsConfig": "packages/sdk-keyexport-utils/tsconfig.json",
-        "assets": ["packages/sdk-keyexport-utils/codegen/*"]
+        "assets": ["packages/sdk-keyexport-utils/codegen/*"],
+        "updateBuildableProjectDepsInPackageJson": true
       }
     }
   }
