--- a/packages/sdk-webauthn/project.json
+++ b/packages/sdk-webauthn/project.json
@@ -6,7 +6,8 @@
         "outputPath": "dist/@dfns/sdk-webauthn",
         "clean": true,
         "main": "packages/sdk-webauthn/index.ts",
-        "tsConfig": "packages/sdk-webauthn/tsconfig.json"
+        "tsConfig": "packages/sdk-webauthn/tsconfig.json",
+        "updateBuildableProjectDepsInPackageJson": true
       }
     }
   }
