--- a/examples/sdk/auth-direct/.env.example
+++ b/examples/sdk/auth-direct/.env.example
@@ -1,4 +1,4 @@
 REACT_APP_DFNS_API_URL='https://api.dfns.ninja'
-REACT_APP_DFNS_APP_ID='<redacted>'
+REACT_APP_DFNS_APP_ID='ap-gcnp5...<redacted>...'
 REACT_APP_DFNS_WEBAUTHN_RPID='localhost'
-REACT_APP_DFNS_ORG_ID='<redacted>'
+REACT_APP_DFNS_ORG_ID='or-6ulof...<redacted>...'
