--- a/examples/sdk/nextjs-delegated-recovery/package.json
+++ b/examples/sdk/nextjs-delegated-recovery/package.json
@@ -18,7 +18,7 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-markdown": "^8.0.7",
+    "react-markdown": "8.0.7",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
