--- a/packages/sdk/project.json
+++ b/packages/sdk/project.json
@@ -7,7 +7,13 @@
         "clean": true,
         "main": "packages/sdk/index.ts",
         "tsConfig": "packages/sdk/tsconfig.json",
-        "updateBuildableProjectDepsInPackageJson": true
+        "updateBuildableProjectDepsInPackageJson": true,
+        "generateExportsField": true,
+        "additionalEntryPoints": [
+          "packages/sdk/types/signers.ts",
+          "packages/sdk/types/wallets.ts",
+          "packages/sdk/types/webhooks.ts"
+        ]
       }
     }
   }
