--- a/examples/libs/solana/basic-tx/package.json
+++ b/examples/libs/solana/basic-tx/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "staking",
+  "name": "solana-basic-tx",
   "version": "1.0.0",
   "main": "main.ts",
   "dependencies": {
     "@dfns/lib-solana": "file:../../../packages/lib-solana",
     "@dfns/sdk": "file:../../../packages/sdk",
     "@dfns/sdk-keysigner": "file:../../../packages/sdk-keysigner",
-    "@solana/web3.js": "1.78.0",
+    "@solana/web3.js": "1.87.6",
     "dotenv": "16.1.4"
   },
   "devDependencies": {
