--- a/examples/libs/vechain/basic-tx/package.json
+++ b/examples/libs/vechain/basic-tx/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vechain",
+  "name": "vechain-basic-tx",
   "version": "1.0.0",
   "main": "main.ts",
   "dependencies": {
-    "@dfns/lib-vechain": "file:../../packages/lib-vechain",
-    "@dfns/sdk": "file:../../packages/sdk",
-    "@dfns/sdk-keysigner": "file:../../packages/sdk-keysigner",
+    "@dfns/lib-vechain": "file:../../../../packages/lib-vechain",
+    "@dfns/sdk": "file:../../../../packages/sdk",
+    "@dfns/sdk-keysigner": "file:../../../../packages/sdk-keysigner",
     "@vechain/connex-framework": "2.0.12",
     "@vechain/connex-driver": "2.0.12",
     "dotenv": "16.1.4"
