--- a/examples/sdk/service-account/tsconfig.json
+++ b/examples/sdk/service-account/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../../tsconfig.base.json",
-  "include": ["index.ts", "src/**/*.ts"],
+  "include": ["index.ts"],
   "compilerOptions": {
     "baseUrl": "./"
   }
