feat(tezos): dfns-1777: add taquito/tezos integration

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@ethersproject/strings": "5.7.0",
     "@ethersproject/transactions": "5.7.0",
     "@solana/web3.js": "1.87.6",
+    "@stablelib/blake2b": "1.0.1",
+    "@taquito/rpc": "17.4.0",
+    "@taquito/taquito": "17.4.0",
     "@tronweb3/tronwallet-abstract-adapter": "1.1.6",
     "@vechain/connex-driver": "2.0.12",
     "bitcoinjs-lib": "6.1.5",
