--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "thor-devkit": "2.0.8",
     "tronweb": "5.3.1",
     "uuid": "9.0.0",
-    "viem": "1.19.11"
+    "viem": "1.19.11",
+    "xrpl": "2.14.0"
   },
   "devDependencies": {
     "@nx/js": "16.8.1",
