move ethereum example testnet to sepolia

--- a/examples/libs/ethersjs/v5/arbitrum-deposit-eth/.env.example
+++ b/examples/libs/ethersjs/v5/arbitrum-deposit-eth/.env.example
@@ -13,5 +13,5 @@ DFNS_AUTH_TOKEN='eyJ0...<redacted>...'
 
 ETHEREUM_WALLET_ID='<redacted>'
 ARBITRUM_WALLET_ID='<redacted>'
-ETHEREUM_NODE_URL='https://ethereum-goerli.publicnode.com'
-ARBITRUM_NODE_URL='https://goerli-rollup.arbitrum.io/rpc'
+ETHEREUM_NODE_URL='https://ethereum-sepolia.publicnode.com'
+ARBITRUM_NODE_URL='https://arbitrum-sepolia.publicnode.com'
