--- a/examples/libs/ethersjs/v5/optimism-deposit-eth/.env.example
+++ b/examples/libs/ethersjs/v5/optimism-deposit-eth/.env.example
@@ -13,5 +13,5 @@ DFNS_AUTH_TOKEN='eyJ0...<redacted>...'
 
 ETHEREUM_WALLET_ID='<redacted>'
 OPTIMISM_WALLET_ID='<redacted>'
-ETHEREUM_NODE_URL='https://ethereum-goerli.publicnode.com'
-OPTIMISM_NODE_URL='https://optimism-goerli.publicnode.com'
+ETHEREUM_NODE_URL='https://ethereum-sepolia.publicnode.com'
+OPTIMISM_NODE_URL='https://optimism-sepolia.publicnode.com'
