--- a/examples/libs/ethersjs/v6/base-deposit-eth/.env.example
+++ b/examples/libs/ethersjs/v6/base-deposit-eth/.env.example
@@ -13,4 +13,4 @@ DFNS_AUTH_TOKEN='eyJ0...<redacted>...'
 
 ETHEREUM_WALLET_ID='<redacted>'
 BASE_WALLET_ID='<redacted>'
-ETHEREUM_NODE_URL='https://ethereum-goerli.publicnode.com'
+ETHEREUM_NODE_URL='https://ethereum-sepolia.publicnode.com'
