update new clients and models

--- a/examples/libs/xrpl/basic-tx/.env.example
+++ b/examples/libs/xrpl/basic-tx/.env.example
@@ -12,3 +12,4 @@ lVoZStj5fsYOQlKmQJl6JHTOARAHmk8OL4LyFDI9dp8V15UqXgo=
 DFNS_AUTH_TOKEN='eyJ0...<redacted>...'
 
 RIPPLE_WALLET_ID='<redacted>'
+RIPPLE_NODE_URL='wss://testnet.xrpl-labs.com'
