--- a/examples/libs/taquito/basic-tx/package.json
+++ b/examples/libs/taquito/basic-tx/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "main.ts",
   "dependencies": {
-    "@dfns/lib-taquito": "file:../../packages/lib-taquito",
-    "@dfns/sdk": "file:../../packages/sdk",
-    "@dfns/sdk-keysigner": "file:../../packages/sdk-keysigner",
+    "@dfns/lib-taquito": "file:../../../packages/lib-taquito",
+    "@dfns/sdk": "file:../../../packages/sdk",
+    "@dfns/sdk-keysigner": "file:../../../packages/sdk-keysigner",
+    "@taquito/rpc": "17.5.0",
+    "@taquito/taquito": "17.5.0",
     "dotenv": "16.1.4"
   },
   "devDependencies": {
