--- a/examples/libs/xrpl/basic-tx/tsconfig.json
+++ b/examples/libs/xrpl/basic-tx/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../../../tsconfig.base.json",
-  "include": ["index.ts"],
+  "include": ["main.ts"],
   "compilerOptions": {
     "baseUrl": "./"
   }
