--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "docs": "typedoc"
   },
   "dependencies": {
+    "@aws-sdk/client-kms": "^3.485.0",
     "@ethersproject/abstract-provider": "5.7.0",
     "@ethersproject/abstract-signer": "5.7.0",
     "@ethersproject/address": "5.7.0",
