rename to xrp ledger

--- a/examples/libs/xrpl/basic-tx/.env.example
+++ b/examples/libs/xrpl/basic-tx/.env.example
@@ -11,5 +11,5 @@ lVoZStj5fsYOQlKmQJl6JHTOARAHmk8OL4LyFDI9dp8V15UqXgo=
 -----END RSA PRIVATE KEY-----'
 DFNS_AUTH_TOKEN='eyJ0...<redacted>...'
 
-RIPPLE_WALLET_ID='<redacted>'
-RIPPLE_NODE_URL='wss://testnet.xrpl-labs.com'
+XRPL_WALLET_ID='<redacted>'
+XRPL_NODE_URL='wss://testnet.xrpl-labs.com'
