--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cross-fetch": "3.1.6",
     "elliptic": "6.5.4",
     "ethers": "6.9.0",
+    "react-native-passkey": "^2.1.1",
     "thor-devkit": "2.0.8",
     "tronweb": "5.3.1",
     "uuid": "9.0.0",
