--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@taquito/taquito": "17.4.0",
     "@tronweb3/tronwallet-abstract-adapter": "1.1.6",
     "@vechain/connex-driver": "2.0.12",
+    "algosdk": "2.7.0",
     "bitcoinjs-lib": "6.1.5",
     "buffer": "6.0.3",
     "cross-fetch": "3.1.6",
