refine readme directions

--- a/examples/sdk/auth-delegated/mobile/ios/mobile/mobile.entitlements
+++ b/examples/sdk/auth-delegated/mobile/ios/mobile/mobile.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>webcredentials:destined-mudfish-inspired.ngrok-free.app?mode=developer</string>
+		<string>webcredentials:panda-new-kit.ngrok-free.app?mode=developer</string>
 	</array>
 </dict>
 </plist>
