--- a/examples/sdk/auth-delegated/mobile/package.json
+++ b/examples/sdk/auth-delegated/mobile/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@dfns/sdk-react-native": "0.3.3-alpha.1",
+    "@dfns/sdk-react-native": "0.3.3",
     "@react-navigation/native": "6.1.10",
     "@react-navigation/native-stack": "6.9.18",
     "react": "18.2.0",
