--- a/examples/sdk/auth-delegated/web/package.json
+++ b/examples/sdk/auth-delegated/web/package.json
@@ -8,6 +8,7 @@
     "jwt-decode": "3.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "8.0.7",
     "react-router-dom": "6.12.1",
     "web-vitals": "2.1.4"
   },
