--- a/examples/sdk/auth-delegated/web/package.json
+++ b/examples/sdk/auth-delegated/web/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@dfns/sdk": "file:../../../../packages/sdk",
+    "@dfns/sdk-browsersigner": "file:../../../../packages/sdk-browsersigner",
     "@dfns/sdk-webauthn": "file:../../../../packages/sdk-webauthn",
+    "buffer": "^6.0.3",
     "jwt-decode": "3.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -13,6 +15,7 @@
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@craco/craco": "7.1.0",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.5",
@@ -26,7 +29,7 @@
     "autoprefixer": "^10.4.14",
     "craco-babel-loader": "1.0.4",
     "postcss": "^8.4.31",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   },
