--- a/examples/sdk/auth-delegated-key-credential/server/package.json
+++ b/examples/sdk/auth-delegated-key-credential/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth-delegated-server",
+  "name": "auth-delegated-key-credential-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
