--- a/examples/sdk/auth-delegated-key-credential/web/package.json
+++ b/examples/sdk/auth-delegated-key-credential/web/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "@craco/craco": "7.1.0",
+    "@craco/craco": "^5.9.0",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -26,7 +26,7 @@
     "@types/react-dom": "^18.2.5",
     "@types/react-router-dom": "5.3.3",
     "autoprefixer": "^10.4.14",
-    "craco-babel-loader": "1.0.4",
+    "craco-babel-loader": "^0.1.4",
     "postcss": "^8.4.31",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2",
