--- a/packages/sdk-browser/project.json
+++ b/packages/sdk-browser/project.json
@@ -3,10 +3,10 @@
     "cb": {
       "executor": "@nx/js:tsc",
       "options": {
-        "outputPath": "dist/@dfns/sdk-browsersigner",
+        "outputPath": "dist/@dfns/sdk-browser",
         "clean": true,
-        "main": "packages/sdk-browsersigner/index.ts",
-        "tsConfig": "packages/sdk-browsersigner/tsconfig.json",
+        "main": "packages/sdk-browser/index.ts",
+        "tsConfig": "packages/sdk-browser/tsconfig.json",
         "updateBuildableProjectDepsInPackageJson": true
       }
     }
