upgrade viem to 2.x

--- a/examples/libs/ethersjs/v6/hardhat/.env.example
+++ b/examples/libs/ethersjs/v6/hardhat/.env.example
@@ -12,4 +12,5 @@ DFNS_AUTH_TOKEN='eyJ0...<redacted>...'
 
 ETHEREUM_WALLET_ID='<redacted>'
 ETHEREUM_NODE_URL='https://ethereum-sepolia.publicnode.com'
-ZERODEV_PROJECT_ID='<redacted>'
+TOKEN_NAME='DfnsExampleToken'
+TOKEN_SYMBOL='EXAMPLE'
