--- a/examples/libs/viem/biconomy-aa-gasless/.env.example
+++ b/examples/libs/viem/biconomy-aa-gasless/.env.example
@@ -11,5 +11,4 @@ lVoZStj5fsYOQlKmQJl6JHTOARAHmk8OL4LyFDI9dp8V15UqXgo=
 DFNS_AUTH_TOKEN='eyJ0...<redacted>...'
 
 ETHEREUM_WALLET_ID='<redacted>'
-ETHEREUM_NODE_URL='https://ethereum-sepolia.publicnode.com'
-ZERODEV_PROJECT_ID='<redacted>'
+BICONOMY_API_KEY='<redacted>'
