--- a/examples/libs/viem/pimlico-aa-gasless/.env.example
+++ b/examples/libs/viem/pimlico-aa-gasless/.env.example
@@ -10,4 +10,6 @@ lVoZStj5fsYOQlKmQJl6JHTOARAHmk8OL4LyFDI9dp8V15UqXgo=
 -----END RSA PRIVATE KEY-----'
 DFNS_AUTH_TOKEN='eyJ0...<redacted>...'
 
-POLYGON_WALLET_ID='<redacted>'
+ETHEREUM_WALLET_ID='<redacted>'
+ETHEREUM_NODE_URL='https://ethereum-sepolia.publicnode.com'
+PIMLICO_API_KEY='<redacted>'
