--- a/examples/libs/viem/pimlico-aa-gasless/package.json
+++ b/examples/libs/viem/pimlico-aa-gasless/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "zerodev-aa-gasless",
+  "name": "pimlico-aa-gasless",
   "version": "1.0.0",
   "main": "main.ts",
   "dependencies": {
     "@dfns/lib-viem": "file:../../../../packages/lib-viem",
     "@dfns/sdk": "file:../../../../packages/sdk",
     "@dfns/sdk-keysigner": "file:../../../../packages/sdk-keysigner",
-    "@zerodev/presets": "5.1.4",
-    "@zerodev/sdk": "5.1.18",
     "dotenv": "16.1.4",
+    "permissionless": "0.1.14",
     "viem": "2.9.9"
   },
   "devDependencies": {
