feat(xlm): dfns-2053: add stellar support

--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@ethersproject/properties": "5.7.0",
     "@ethersproject/strings": "5.7.0",
     "@ethersproject/transactions": "5.7.0",
-    "@polkadot/api": "^10.11.3",
     "@meshsdk/core": "1.5.10",
+    "@polkadot/api": "^10.11.3",
     "@solana/web3.js": "1.87.6",
     "@stablelib/blake2b": "1.0.1",
+    "@stellar/stellar-sdk": "11.3.0",
     "@taquito/rpc": "17.4.0",
     "@taquito/taquito": "17.4.0",
     "@tronweb3/tronwallet-abstract-adapter": "1.1.6",
