--- a/packages/lib-algorand/package.json
+++ b/packages/lib-algorand/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@dfns/lib-algorand",
-  "version": "0.4.2"
+  "version": "0.4.2",
+  "peerDependencies": {
+    "algosdk": "^2.0.0"
+  }
 }
