--- a/packages/lib-bitcoinjs/package.json
+++ b/packages/lib-bitcoinjs/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@dfns/lib-bitcoinjs",
-  "version": "0.4.2"
+  "version": "0.4.2",
+  "peerDependencies": {
+    "bitcoinjs-lib": "^6.0.0"
+  }
 }
