--- a/packages/lib-meshsdk/package.json
+++ b/packages/lib-meshsdk/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@dfns/lib-meshsdk",
-  "version": "0.4.2"
+  "version": "0.4.2",
+  "peerDependencies": {
+    "@meshsdk/core": "^1.0.0"
+  }
 }
