--- a/packages/lib-polkadot/package.json
+++ b/packages/lib-polkadot/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@dfns/lib-polkadot",
-  "version": "0.4.2"
+  "version": "0.4.2",
+  "peerDependencies": {
+    "@polkadot/api": "^10.0.0"
+  }
 }
