--- a/packages/lib-solana/package.json
+++ b/packages/lib-solana/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@dfns/lib-solana",
-  "version": "0.4.2"
+  "version": "0.4.2",
+  "peerDependencies": {
+    "@solana/web3.js": "^1.0.0"
+  }
 }
