--- a/packages/lib-stellar/package.json
+++ b/packages/lib-stellar/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@dfns/lib-stellar",
-  "version": "0.4.1"
+  "version": "0.4.2",
+  "peerDependencies": {
+    "@stellar/stellar-sdk": "^11.0.0"
+  }
 }
