--- a/packages/lib-tron/package.json
+++ b/packages/lib-tron/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@dfns/lib-tron",
-  "version": "0.4.2"
+  "version": "0.4.2",
+  "peerDependencies": {
+    "tronweb": "^5.0.0"
+  }
 }
