--- a/packages/lib-vechain/package.json
+++ b/packages/lib-vechain/package.json
@@ -1,4 +1,8 @@
 {
   "name": "@dfns/lib-vechain",
-  "version": "0.4.2"
+  "version": "0.4.2",
+  "peerDependencies": {
+    "@vechain/connex-driver": "2.0.12",
+    "thor-devkit": "2.0.8"
+  }
 }
