fix: code review

--- a/examples/sdk/auth-social/.env.example
+++ b/examples/sdk/auth-social/.env.example
@@ -1,2 +1,2 @@
 REACT_APP_DFNS_APP_ID='ap-gcnp5...<redacted>...'
-REACT_APP_DFNS_API_URL='https://api.dfns.wtf'
+REACT_APP_DFNS_API_URL='https://api.dfns.ninja'
