Add Readme for auth-social

--- a/examples/sdk/auth-social/.env.example
+++ b/examples/sdk/auth-social/.env.example
@@ -1,2 +1,3 @@
 REACT_APP_DFNS_APP_ID='ap-gcnp5...<redacted>...'
 REACT_APP_DFNS_API_URL='https://api.dfns.ninja'
+REACT_APP_DFNS_GOOGLE_OAUTH_CLIENT_ID='185321228227-mh9v8d2i71fbhc3r9lkst9ci2n5i5rfn.apps.googleusercontent.com'
