fix: use the published export/import wasm packages

--- a/packages/sdk-keyexport-utils/tsconfig.json
+++ b/packages/sdk-keyexport-utils/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["*.ts", "codegen/**/*"],
+  "include": ["*.ts"],
   "compilerOptions": {
     "baseUrl": "./"
   }
