--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-kms": "^3.485.0",
+    "@dfns/dfns-key-export": "0.1.0",
+    "@dfns/dfns-key-import": "0.1.0",
     "@ethersproject/abstract-provider": "5.7.0",
     "@ethersproject/abstract-signer": "5.7.0",
     "@ethersproject/address": "5.7.0",
