feat(kaspa): add kaspa to the sdk

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-kms": "^3.485.0",
     "@dfns/dfns-key-export-nodejs": "0.2.1",
     "@dfns/dfns-key-import-nodejs": "0.2.1",
+    "@dfns/kaspa-wasm": "0.14.1",
     "@ethersproject/abstract-provider": "5.7.0",
     "@ethersproject/abstract-signer": "5.7.0",
     "@ethersproject/address": "5.7.0",
@@ -51,8 +52,8 @@
     "@solana/web3.js": "^1.0.0",
     "@stellar/stellar-sdk": "^11.0.0",
     "@taquito/taquito": "^17.0.0",
-    "@vechain/connex-driver": "2.0.12",
     "@ton/ton": "13.11.2",
+    "@vechain/connex-driver": "2.0.12",
     "algosdk": "^2.0.0",
     "bitcoinjs-lib": "^6.0.0",
     "ethers": "^6.0.0",
