--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "typescript": "^5.0.4"
   },
   "peerDependencies": {
+    "@cosmjs/crypto": "^0.32.0",
+    "@cosmjs/encoding": "^0.32.0",
+    "@cosmjs/proto-signing": "^0.32.0",
     "@meshsdk/core": "^1.0.0",
     "@polkadot/api": "^10.0.0",
     "@solana/web3.js": "^1.0.0",
@@ -56,6 +59,7 @@
     "@vechain/connex-driver": "2.0.12",
     "algosdk": "^2.0.0",
     "bitcoinjs-lib": "^6.0.0",
+    "cosmjs-types": "^0.9.0",
     "ethers": "^6.0.0",
     "thor-devkit": "2.0.8",
     "tronweb": "^5.0.0",
