fix: generic ton message signing

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@solana/web3.js": "^1.0.0",
     "@stellar/stellar-sdk": "^11.0.0",
     "@taquito/taquito": "^17.0.0",
-    "@ton/ton": "13.11.2",
+    "@ton/ton": "^15.0.0",
     "@vechain/connex-driver": "2.0.12",
     "algosdk": "^2.0.0",
     "bitcoinjs-lib": "^6.0.0",
