--- a/examples/libs/ton/basic-tx/package.json
+++ b/examples/libs/ton/basic-tx/package.json
@@ -7,6 +7,7 @@
     "@dfns/sdk": "file:../../../packages/sdk",
     "@dfns/sdk-keysigner": "file:../../../packages/sdk-keysigner",
     "@orbs-network/ton-access": "2.3.3",
+    "@ton/ton": "15.1.0",
     "dotenv": "16.1.4"
   },
   "devDependencies": {
